--- a/kubernetes/persistent-volumes.yml
+++ b/kubernetes/persistent-volumes.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
    name: host-pv
-specs:
+spec:
   capacity:
     storage: 1Gi
   volumeMode: Filesystem # Other one being Block, see docs
@@ -11,6 +11,6 @@ specs:
     # - ReadOnlyMany # Read only, but can be claimed by multiple pods from multiple nodes
     # - ReadWriteMany
   hostPath: # This hostPath is different than regular hostPath volume
-    path: /home/user/data 
+    path: /data
     type: DirectoryOrCreate
 
