add users service

--- a/kubernetes/networking/kubernetes/user-api-deployment.yml
+++ b/kubernetes/networking/kubernetes/user-api-deployment.yml
@@ -9,7 +9,7 @@ spec:
       app: user-api
   template:
     metadata:
-      label:
+      labels:
         app: user-api
     spec:
       containers:
