add cmake stuff

--- a/cpp/cmake/simple/CMakeLists.txt
+++ b/cpp/cmake/simple/CMakeLists.txt
@@ -1,5 +1,7 @@
-cmake_minimum_required(VERSION 3.22.1)
+cmake_minimum_required(VERSION 2.8)
 
 project(simple)
 
 add_executable(${PROJECT_NAME} main.cpp)
+
+# install(TARGETS simple DESTINATION bin)
