--- a/cpp/cmake/static_lib/CMakeLists.txt
+++ b/cpp/cmake/static_lib/CMakeLists.txt
@@ -4,7 +4,8 @@ project(simple)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-add_executable(${PROJECT_NAME} main.cpp math/math.h)
+add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/math/build)
+add_subdirectory(math)
+
 target_link_libraries(${PROJECT_NAME} math)
